# rmeshvk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TMSM.md  check_rmesh.py  convert.py  counters.csv  debug.entitlements  renderdoc.cap
crates/rmesh-backward/: Cargo.toml
crates/rmesh-backward/benches/: compute_interval.rs  tiled_pipeline.rs
crates/rmesh-backward/examples/: tile_size_sweep.rs
crates/rmesh-backward/src/: lib.rs
crates/rmesh-backward/src/wgsl/: backward_compute.wgsl  backward_tiled_compute.wgsl
crates/rmesh-backward/tests/: kernel_tests.rs
crates/rmesh-compositor/: Cargo.toml
crates/rmesh-compositor/src/: compositor_pass.rs  geometry.rs  lib.rs  primitive_pass.rs
crates/rmesh-compositor/src/wgsl/: composite.wgsl  primitive.wgsl  primitive_mrt.wgsl
crates/rmesh-data/: Cargo.toml
crates/rmesh-data/src/: lib.rs
crates/rmesh-dsm/: Cargo.toml
crates/rmesh-dsm/src/: lib.rs
crates/rmesh-dsm/src/wgsl/: dsm_fourier_fragment.wgsl  dsm_fragment.wgsl  dsm_primitive.wgsl  dsm_resolve.wgsl  interval_vertex.wgsl
crates/rmesh-error/: Cargo.toml
crates/rmesh-error/src/: lib.rs
crates/rmesh-error/src/wgsl/: error_tiled_compute.wgsl
crates/rmesh-interact/: Cargo.toml
crates/rmesh-interact/src/: event.rs  lib.rs  numeric.rs  state_machine.rs  transform.rs
crates/rmesh-python/: Cargo.toml  pyproject.toml
crates/rmesh-python/python/rmesh_wgpu/: __init__.py  autograd.py
crates/rmesh-python/src/: lib.rs
crates/rmesh-python/tests/: test_autograd.py
crates/rmesh-render/: Cargo.toml
crates/rmesh-render/src/: lib.rs
crates/rmesh-render/src/wgsl/: ao_bilateral.wgsl  blit.wgsl  deferred_shade_frag.wgsl  forward_compute.wgsl  forward_fragment.wgsl  forward_fragment_quad.wgsl  forward_mesh.wgsl  forward_prepass_compute.wgsl  forward_tiled_compute.wgsl  forward_vertex.wgsl  forward_vertex_quad.wgsl  gtao.wgsl  hiz_downsample.wgsl  hiz_linearize.wgsl  indirect_convert.wgsl  interval_compute.wgsl  interval_fragment.wgsl  interval_indirect_convert.wgsl  interval_mesh.wgsl  interval_vertex.wgsl  project_compute.wgsl  project_compute_16bit.wgsl  project_compute_hw.wgsl  rasterize_compute.wgsl  raytrace_compute.wgsl  ssgi_bilateral.wgsl  ssgi_compute.wgsl  ssr_compute.wgsl  temporal.wgsl
crates/rmesh-render/tests/: cross_renderer_test.rs  gradient_test.rs  kernel_tests.rs  mrt_test.rs  multi_tet_test.rs  overdraw_stats.rs  single_tet_test.rs
crates/rmesh-render/tests/common/: mod.rs
crates/rmesh-shaders/src/: lib.rs  shared.rs
crates/rmesh-shaders/src/wgsl/: adam_compute.wgsl  backward_tiled_compute.wgsl  block_scan_large.wgsl  forward_compute.wgsl  forward_tiled_compute.wgsl  loss_compute.wgsl  prefix_scan.wgsl  prefix_scan_add.wgsl  prepare_dispatch.wgsl  raytrace_compute.wgsl  rts.wgsl  tex_to_buffer.wgsl  tile_fill_compute.wgsl  tile_gen_compute.wgsl  tile_gen_scan_compute.wgsl  tile_ranges_compute.wgsl
crates/rmesh-sim/: Cargo.toml
crates/rmesh-sim/src/: lib.rs
crates/rmesh-sim/src/shaders/: fluid_advect.wgsl  fluid_diffuse.wgsl  fluid_divergence.wgsl  fluid_forces.wgsl  fluid_pressure.wgsl  fluid_project.wgsl  fluid_to_render.wgsl  precompute_geometry.wgsl
crates/rmesh-sort/: Cargo.toml
crates/rmesh-sort/src/: lib.rs
crates/rmesh-tile/src/: lib.rs
crates/rmesh-tile/src/wgsl/: prepare_dispatch.wgsl  tile_gen_scan_compute.wgsl
crates/rmesh-train/src/: lib.rs  main.rs
crates/rmesh-train/src/wgsl/: loss_compute.wgsl
crates/rmesh-util/src/: camera.rs  compose.rs  shared.rs  test_util.rs
crates/rmesh-util/src/wgsl/: common.wgsl  intersect.wgsl  math.wgsl
crates/rmesh-viewer/: Cargo.toml
crates/rmesh-viewer-web/: Cargo.toml
crates/rmesh-viewer-web/src/: lib.rs
crates/rmesh-viewer-web/web/: index.html
crates/rmesh-viewer/src/: gpu_state.rs  main.rs  render.rs
scripts/: derive_backward.py  run_tests.sh  test_trig_moments.py
