[workspace]
resolver = "2"
members = [
    "crates/rmesh-util",
    "crates/rmesh-sort",
    "crates/rmesh-tile",
    "crates/rmesh-render",
    "crates/rmesh-backward",
    "crates/rmesh-error",
    "crates/rmesh-data",
    "crates/rmesh-train",
    "crates/rmesh-viewer",
    "crates/rmesh-python",
    "wtet",
]

[workspace.dependencies]
wgpu = "28"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck"] }
winit = "0.30"
image = "0.25"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
half = { version = "2", features = ["bytemuck"] }
flate2 = "1"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
numpy = "0.28"
