[workspace]
resolver = "2"
members = [
    "crates/rmesh-util",
    "crates/rmesh-sort",
    "crates/rmesh-tile",
    "crates/rmesh-render",
    "crates/rmesh-backward",
    "crates/rmesh-error",
    "crates/rmesh-data",
    "crates/rmesh-train",
    "crates/rmesh-sim",
    "crates/rmesh-interact",
    "crates/rmesh-compositor",
    "crates/rmesh-viewer",
    "crates/rmesh-viewer-web",
    "crates/rmesh-python",
    "crates/rmesh-neural",
    "crates/rmesh-dsm",
    # "wtet",  # submodule not always available
]

[workspace.dependencies]
wgpu = { version = "28", features = ["webgl"] }   # or "webgpu" for WebGPU backend
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck"] }
winit = "0.30"
image = "0.25"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
half = { version = "2", features = ["bytemuck"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
rayon = "1"
pyo3 = { version = "0.28.2", features = ["extension-module"] }
numpy = "0.28"
egui = { git = "https://github.com/emilk/egui.git", branch = "main" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", branch = "main" }
egui-winit = { git = "https://github.com/emilk/egui.git", branch = "main" }
rfd = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_log = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
