[package]
name = "rmesh-backward"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-util = { path = "../rmesh-util" }
rmesh-render = { path = "../rmesh-render" }
rmesh-sort = { path = "../rmesh-sort" }
rmesh-tile = { path = "../rmesh-tile" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
glam = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
rmesh-data = { path = "../rmesh-data" }
rmesh-train = { path = "../rmesh-train" }
rmesh-util = { path = "../rmesh-util", features = ["test-util"] }

[[bench]]
name = "tiled_pipeline"
harness = false
