[package]
name = "rmesh-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "rmesh_wgpu"
crate-type = ["cdylib"]

[dependencies]
rmesh-shaders = { path = "../rmesh-shaders" }
rmesh-render = { path = "../rmesh-render" }
rmesh-backward = { path = "../rmesh-backward" }
rmesh-data = { path = "../rmesh-data" }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
