[package]
name = "rmesh-render"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-shaders = { path = "../rmesh-shaders" }
rmesh-tile = { path = "../rmesh-tile" }
rmesh-data = { path = "../rmesh-data" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
pollster = { workspace = true }
half = { workspace = true }
