[package]
name = "rmesh-render"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-util = { path = "../rmesh-util" }
rmesh-tile = { path = "../rmesh-tile" }
rmesh-data = { path = "../rmesh-data" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
pollster = { workspace = true }
half = { workspace = true }
rmesh-util = { path = "../rmesh-util", features = ["test-util"] }
rmesh-sort = { path = "../rmesh-sort" }
rmesh-tile = { path = "../rmesh-tile" }
