[package]
name = "rmesh-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
rmesh-render = { path = "../rmesh-render" }
rmesh-data = { path = "../rmesh-data" }
rmesh-sort = { path = "../rmesh-sort" }
rmesh-sim = { path = "../rmesh-sim" }
rmesh-interact = { path = "../rmesh-interact" }
rmesh-compositor = { path = "../rmesh-compositor" }
rmesh-dsm = { path = "../rmesh-dsm" }
rmesh-util = { path = "../rmesh-util" }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rayon = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
rfd = { workspace = true }
half = { workspace = true }
